--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,18 +4,17 @@ body{
     font-family: 'Raleway', sans-serif !important;
 }
 
-header{
-    max-height: 30% !important;
+.navbar-dark{
+    text-shadow: 2px 2px 2px #000000 !important;
 }
 
 .carousel-inner{
     max-height: 30% !important;
 }
 
-.navbar-dark{
-    text-shadow: 2px 2px 8px #000000 !important;
+.carousel-item{
+    max-height: 100vh;
 }
-
 hr{
     background-color: #0B5F6B !important;
     width: 55%;
@@ -23,8 +22,8 @@ hr{
 }
 
 .bg-cyan{
-    background-color: #17A3B8;
-    color: white ;
+    background-color: #17A3B8 !important;
+    color: white !important;
 }
 
 p {
