--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,3 +33,12 @@ p {
 footer h4{
     font-weight: 800;
 }
+
+footer a{
+    text-decoration: none;
+    color: #fff;
+}
+footer a:hover{
+    text-decoration: none;
+    color: #fff;
+}
