--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,10 +35,10 @@ footer h4{
 }
 
 footer a{
-    text-decoration: none;
-    color: #fff;
+    text-decoration: none !important;
+    color: #fff !important;
 }
 footer a:hover{
-    text-decoration: none;
-    color: #fff;
+    text-decoration: none !important;
+    color: #fff !important;
 }
