--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,3 +42,8 @@ footer a:hover{
     text-decoration: none !important;
     color: #fff !important;
 }
+
+.footerAnchor{
+    text-decoration: none !important;
+    color: #fff !important;
+}
