--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@ body{
     text-shadow: 2px 2px 2px #000000 !important;
 }
 
+.navbarBg{
+    background-color:rgba(0, 0, 0, 0.25);
+    padding-top: 3.5rem;
+}
 .carousel-inner{
     max-height: 30% !important;
 }
